# VoiceQwik

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakeSettings.json  DELIVERY_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT.md  QUICKSTART.md  README.md  VoiceQwik.rc  VoiceQwik.sln  VoiceQwik.vcxproj
include/audio/: WasapiAudioEngine.h
include/gui/: GuiWindow.h
include/networking/: AudioStreamer.h  PeerNetwork.h
include/utils/: Common.h  Logger.h
src/: main.cpp
src/audio/: WasapiAudioEngine.cpp
src/gui/: GuiWindow.cpp
src/networking/: AudioStreamer.cpp  PeerNetwork.cpp
src/utils/: Logger.cpp
